2010-12-08   D. V. Wiebe <getdata@ketiltrout.net>   svn:497
	* m4/encoding.m4: Replace TEST_<foo> AM_CONDITIONALs with a preprocessor
	symbols.
	* test/Makefile.am: Remove TEST_<foo> conditionals.
	* test/gzip_move_from.c test/bzip_get_get.c test/gzip_get_get.c
	test/gzip_get.c test/xz_nframes.c test/slim_nframes.c test/lzma_nframes.c
	test/slim_get.c test/lzma_get.c test/bzip_move_from.c test/xz_get.c: If
	helper binaries are unavailable, just skip these tests.

	* test/test.h: MSVC mkdir() patch from Peter Kümmel.

2010-12-07   D. V. Wiebe <getdata@ketiltrout.net>   svn:494
	MSVC fixes from Peter:

	* test/*.c: Remove unistd.h include.  (It will be included in internal.h
	when needed.)

	* src/flush.c: No need to make the GD_VERS_* macros long longs.

	* src/putdata.c (_GD_DoConstOut): Cast to char* before performing pointer
	arithmetic.

	* src/mod.c (_gd_max): Renamed from max for better encapsulation.

	* src/internal.h: Conditionalise inclusion of non-ANSI unistd.h and stdint.h.
	Various _MSC_VER specific code.  Also, define gd_stat64 and gd_stat64_t to
	plausibly useful things by default.o
	
	* src/getdata.h.in: Remove unistd.h. Add math.h and some _MSC_VER specific
	code.  (There are still unresolved MSVC issues with this file.)

	* bindings/cxx/*.cpp: Fix constructor inhertiance.

	* configure.ac: Check for unistd.h and stdint.h.

2010-12-06   D. V. Wiebe <getdata@ketiltrout.net>   svn:493
	GetData-0.7.1 released.

2010-11-30   D. V. Wiebe <getdata@ketiltrout.net>   svn:488
	GetData-0.7.1rc1:

	* src/del.c (gd_delete): Fix order of tests to avoid accessing out-of-bounds
	memory.
	* src/parse.c (_GD_ParseDirective): Don't update the version list if
	_GD_Include failed.
	* src/common.c (_GD_GetRepr): Don't attempt to find a representation suffix
	on field codes which are too short to contain them.
	* src/add.c (_GD_Add): Zero memory allocated for a CARRAY or CONST so
	behaviour is deterministic when creating these fields via gd_[m]add().
